# Pylectra

./: CONTRIBUTING.md  LICENSE  README.md  getting_result.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-torch.txt  requirements.txt  run.py
.github/workflows/: docs.yml
docs/en/: faq.md  index.md
docs/javascripts/: apple.js
docs/stylesheets/: apple.css
docs/zh/: faq.md  index.md
examples/: batch_case39.yaml  batch_case39_smallsignal.yaml  batch_pf_case39.yaml  cct_case39.yaml  cct_case39_scipy.yaml  single_case118.yaml  single_case14.yaml  single_case30.yaml  single_case39.yaml  single_case39_scipy.yaml  single_case39_smallsignal.yaml  single_case39_smallsignal_with_sim.yaml  single_case39_torch.yaml  single_case57.yaml  single_case9.yaml
overrides/partials/: source-info.html
pylectra/: __init__.py  __main__.py  _version.py  cli.py  config.py  hardware.py  plugin_loader.py  registry.py  run.py
pylectra/cases/: __init__.py  pp_builtin.py
pylectra/core/: __init__.py  case.py  freq.py  idx.py  result.py  system.py
pylectra/engine/: __init__.py  derivatives.py  equilibrium.py  init_states.py  legacy_loop.py  legacy_solvers.py  loop.py  rhs.py  state.py  torch_engine.py  torch_engine_batched.py
pylectra/faults/: __init__.py  bus_fault.py  composite.py  line_trip.py  load_step.py
pylectra/filters/: __init__.py  builtin.py  small_signal_filter.py
pylectra/interfaces/: __init__.py  case_loader.py  exciter.py  fault.py  filter.py  generator.py  governor.py  ode_solver.py  plot.py  power_flow.py  pss.py  scenario.py  small_signal.py
pylectra/io/: __init__.py  dyn_loaders.py  hdf5_writer.py  loadcase.py  metadata_writer.py
pylectra/models/: __init__.py
pylectra/network/: __init__.py  machine_currents.py  solve.py  ybus.py
pylectra/plotting/: __init__.py  _loaders.py  batch_stats.py  io.py  plugins.py  sg.py  style.py  time_series.py  topology.py
pylectra/powerflow/: __init__.py  _extint.py  _solver.py  newton.py  pp_backend.py
pylectra/runners/: __init__.py  _pf_snapshot.py  batch.py  batch_pf.py  cct.py  single.py
pylectra/scenarios/: __init__.py  perturb.py
pylectra/small_signal/: __init__.py  finite_difference.py  modal.py
pylectra/solvers/: __init__.py  (+6 more)
scripts/: bench_batched_gpu.py
(+111 files in other folders)
